# aws-rust-le-solver

./: Cargo.toml  README.md  deploy.sh  template.yml  test_fail.txt
.github/workflows/: rust.yml
src/: main.rs
test_files/: test.txt  test2.txt
