[package]
name = "hello_aws"
version = "0.1.0"
edition = "2021"
authors = ["patrickbaumann579@gmail.com"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1.0.79"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lambda_runtime = "0.5.1"
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
time = "0.3.9"
gauss = { path = "/Users/patrickbaumann/Documents/rust/stuff/gauss" }